# learn_cuda

samples/0_Simple/cdpSimplePrint/: cdpSimplePrint
samples/0_Simple/vectorAdd/: vectorAdd
test_cuda/: CMakeLists.txt  vectorAdd.cu  vectorDist.cu
test_thread/: CMakeLists.txt  thread_idx.cu  thread_idx_1d.cu  thread_idx_2d.cu
